<resources>
    <string name="app_name">Pendaki</string>
    <string name="openDrawer">Drawer dibuka</string>
    <string name="closeDrawer">Drawer ditutup</string>
    <string name="navigation_view_item_1">Informasi Gunung</string>
    <string name="navigation_view_item_2">Informasi Pendakian</string>
    <string name="navigation_view_item_3">Peralatan</string>
    <string name="navigation_view_item_4">Lokasi Gunung</string>
    <string name="navigasi_kategori_2">Other</string>
    <string name="navigation_view_item_10">Settings</string>
    <string name="navigation_view_item_11">About</string>
    <string name="argopuro">\u0020\u0020\u0020\u0020\u0020Gunung Argopuro atau disebut
        juga “Argopura” adalah gunung api yang terletak di
        Jawa Timur tepatnya di perbatasan kabupaten Probolinggo, Situbondo dan Bondowoso. Argopuro memiliki arti
        “Argo=Gunung” dan “Puro=pura” sama dengan “Pura di atas gunung. Gunung ini sudah tidak aktif lagi.
        Gunung Argopuro memiliki ketinggian 3.088 mdpl.\n\u0020\u0020\u0020\u0020\u0020Gunung
        Argopuro masuk dalam kawaasan Pegunungan Iyang di Jawa Timur. Secara geografis gunung Argopuro
        berdiri di antara kedua gunung yang memiliki peringkat khusus di Indonesia yakni Gunung Semeru
        (puncak tertinggi di Jawa) dan Gunung Raung (trek tersulit). Jika Semeru dan Raung ber-peringkat
        maka Argopuro juga demikian adanya, Gunung Argopuro berperingkat sebagai gunung dengan jalur
        pendakian terpanjang di Jawa.</string>
    <string name="argopuro1">Jalur Bremi (Probolinggo)\nJalur Baderan</string>
    <string name="argopuro2">Nama: Gunung Argopuro\nLokasi: Probolinggo\nKetinggian: 3.088 mdpl\nSpo
        t alam: Sabana, savana, danau\nSumber air: Danau Taman Hidup\nPuncak: Puncak Rengganis, Puncak Arca, Puncak Argopoera</string>
    <string name="arjuno">\u0020\u0020\u0020\u0020\u0020Gunung Arjuno atau “Arjuna” adalah gunung
        api yang terletak di Malang, Jawa Timur. Gunung ini adalah
        gunung yang memiliki kembaran bernama Gunung Welirang. Karena
        puncak gunung Arjuno yang berdekatan dengan puncak gunung Welirang
        maka orang banyak menyebut dua gunung kembar tersebut sebagai Gunung
        Arjuno-Welirang.\n\u0020\u0020\u0020\u0020\u0020Gunung
        Arjuno masuk dalam kawasan Taman Hutan Raya Raden Soeryo. Di gunung ini juga terdapat objek
        wisata yang cukup menarik yakni air terjun Kakek Bodo. Selain itu gunung komplek Gunung
        Arjuno-Welirang juga memiliki kekayaan alam yang sangat indah seperti sabana, lembah,
        berbagai macam bunga, fauna, dan sumber air.\n\u0020\u0020\u0020\u0020\u0020Seperti
        kebanyakan gunung di Jawa, gunung Arjuno juga kental akan mitos. Gunung Arjuno tak
        jarang dijadikan tempat orang untuk bersemedi dan ritual mencari ketenangan lainnya.
        Sepanjang jalur menuju puncak gunung Arjuno banyak ditemui situs peninggalan sejarah
        berupa batu atau arca bekas kerajaan Majapahit.</string>
    <string name="arjuno1">Jalur Lawang (Timur),\nTretes (Utara) ,\nBatu (Barat),\nKarangploso
        (Selatan),\nSumberawan,\nPurwosari.</string>
    <string name="arjuno2">Nama: Gunung Arjuno\nKetinggian: 3.339 mdpl\nLokasi: Malang, Jawa
        Timur.\nTipe: Gunung berapi strato\nLetusan terakhir: 1952\nPuncak: Puncak Arjuno, Puncak Ogal-agil</string>
    <string name="baluran">\u0020\u0020\u0020\u0020\u0020Gunung Baluran adalah gunung kecil yang masuk
        dalam kawasan Taman Nasional Baluran, Situbondo, Jawa Timur. Gunung ini bisa
        dibilang gunung yang berdiri di ujung pulau Jawa paling timur. Gunung Baluran memiliki
        ketinggi 1.247 mdpl.\n\u0020\u0020\u0020\u0020\u0020Gunung ini sudah tidak aktif lagi.
        Dinding kawahnya membatasi kaldera yang luas yang dalamnya 600 meter. Ada dugaan
        di bagian timur yang lebih tinggi dari gunung ini telah meletus dan melemparkan batu-batu
        besar keluar. Bagian
        tengah pegunungan terbagi-bagi membentuk kaldera yang dalam dengan cerukan kawah yang
        memadat di dasarnya.</string>
    <string name="baluran1">Karangtekok\nWonorejo.</string>
    <string name="baluran2">Nama: Gunung Baluran\nLokasi: Situbondo\nKetinggian: 1247 mdpl\nTipe: Gunung Non-Aktif</string>
    <string name="bromo">\u0020\u0020\u0020\u0020\u0020Gunung Bromo adalah gunung api yang masih aktif
        yang terletak di Jawa Timur tepatnya di
        Kabupaten Probolinggo, Pasuruan, Lumajang, dan Kabupaten Malang. Gunung Bromo memiliki ketinggian
        2.392 mdpl.\n\u0020\u0020\u0020\u0020\u0020Sejarah terbentuknya gunung Bromo adalah bermula dari letusan
        yang memecah belah Gunung Tengger
        (4000 mdpl). Akibat letusan tersebut terbentuklah sebuah komplek gunung yang di dalamnya
        meliputi Lautan Pasir, Gunung Widodaren, Gunung Watangan, Gunung Kursi, Gunung Batok dan Gunung
        Bromo. Selain penjelasan secara ilmiah, terbentuknya atau sejarah gunung Bromo juga sangat kental
        akan cerita rakyat.</string>
    <string name="bromo1">Desa Tosari – Wonokitri\nCemoro lawang – Ngadisari\nJemplang – Ngadas</string>
    <string name="bromo2">Nama: Gunung Bromo\nKetinggian: 2.392 mdpl\nLokasi: Probolinggo, Pasuruan,
        Lumajang, Malang\nTipe: Gunung api aktif</string>
    <string name="butak">\u0020\u0020\u0020\u0020\u0020Gunung Butak adalah gunung api yang terletak
        di Malang dan Blitar, Jawa Timur.
        Gunung ini memiliki
        ketinggian 2.868 mdpl. Gunung Kawi memiliki kembaran seperti halnya Gunung
        Arjuno dan Gunung Welirang.\n\u0020\u0020\u0020\u0020\u0020Gunung Butak mungkin memiliki ketinggian
        yang cukup ideal untuk didaki, namun masih jarang pendaki
        yang memiliki gunung ini sebagai target pendakian mereka. Hal tersebut dikarenakan masih minimnya
        informasi yang tersedia. Padahal pemandangan yang disediakan gunung ini tak kalah indah. Dan pilihan
        jalur pendakian juga tak sedikit. Dari puncak Butak kita bisa melihat puncak gunung Arjuno,
        Welirang dan Mahameru.</string>
    <string name="butak1">Jalur Sirah Kencong, Blitar\nJalur gunung Kawi Kepanjen,\nJalur Desa
        Gadingkulon-Dau-Malang,\nJalur Bukit Panderman Batu-Malang</string>
    <string name="butak2">Nama: Gunung Butak\nLokasi : Blitar\nKetinggian : 2.868 mdpl\nTipe : Gunung Non-Aktif</string>
    <string name="ijen">\u0020\u0020\u0020\u0020\u0020Gunung Ijen adalah gunung api yang masih aktif
        yang terletak di kabupaten Banyuwangi,
        Jawa Timur. Gunung ini tercatat pernah meletus sebanyak empat kali yakni pada 1796, 1817, 1913,
        dan 1936. Gunung Ijen memiliki ketinggian 2.443 mdpl.\n\u0020\u0020\u0020\u0020\u0020Gunung
        Ijen paling terkenal dengan kawahnya. Kawah Ijen adalah danau kawah terbesar di dunia.
        Kawah tersebut memiliki kedalaman 200 meter dan 5466 Hektar serta memiliki ketinggian
        2.368 mdpl dan pengelolaan kawah Ijen tersebut masuk dalam Cagar Alam Taman Wisata Ijen,
        Bondowoso.\n\u0020\u0020\u0020\u0020\u0020Kawah Ijen terkenal
        dengan hasil alam berupa batu belerang dan api
        abadi-nya. Jika kita ingin melihat api abadi gunung
        Ijen kita harus siap-siap melakukan pendakian pada pagi hari sekali.
        Hal tersebut dikarenakan api biru hanya terlihat pada dini hari saja</string>
    <string name="ijen1">Banyuwangi\nBondowoso</string>
    <string name="ijen2">Nama: Gunung Ijen\nKetinggian: 2.443 mdpl\nLokasi: Banyuwangi\nLetusan
        terakhir: 1999\nTipe:
        Gunung Aktif\nPengelola: Cagar Alam Taman Wisata Ijen</string>
    <string name="kawi">\u0020\u0020\u0020\u0020\u0020Gunung Kawi adalah gunung berapi yang terletak
        di Malang, tepatnya di Desa Wonosari,
        Malang, Jawa Timur. Gunung ini memiliki ketinggian 2.551 mdpl. Gunung Kawi memiliki kembaran seperti
        halnya Gunung Arjuno dan Gunung Welirang.\n\u0020\u0020\u0020\u0020\u0020Gunung Kawi dijadikan sebagai
        obyek wisata. Di kaki gunung Kawi banyak dijumpai situs situs
        penainggalan sejarah yang berbau tiongkok. Di sepanjang jalan kita akan menemui bangunan
        bangunan dengan arsitektur khas Tiongkok, dimana terdapat sebuah kuil/klenteng tempat untuk
        bersembahyang atau melakukan ritual khas Kong Hu Cu. Di sepanjang jalan juga banyak
        terdapat penginapan baik itu hotel, losmen, atau bahkan rumah penduduk
        dapat juga disewa untuk dijadikan tempat menginap.</string>
    <string name="kawi1">Pesarean Gunung Kawi\nPerkebunan teh senggrong</string>
    <string name="kawi2">Nama: Gunung Kawi\nKetinggian: 2.551 mdpl\nLokasi: Kabupaten
        Malang\nTipe : Gunung Berapi</string>
    <string name="kelud">\u0020\u0020\u0020\u0020\u0020Gunung Kelud adalah gunung api yang masih aktif yang
        terletak di perbatasan antara
        Kabupaten Kediri, Kabupaten Blitar, dan Kabupaten Malang. Gunung Kelud memiliki ketinggian
        1.731 mdpl. Meskipun merupakan gunung kecil namun gunung ini bisa sewaktu-waktu meletus dan
        letusannya bisa sampai Bali dan Jakarta.\n\u0020\u0020\u0020\u0020\u0020Gunung Kelud sudah 30 kali
        meletus sejak tahun 1000 M. Dan letusan terakhir pada 2014. Letusan pada 2014 ini terjadi sangat
        hebat. Bahkan dinyatakan bahwa letusan satu hari Gunung Kelud 2014 setara dengan
        letusan Gunung Merapi 2010 sebulan.\n\u0020\u0020\u0020\u0020\u0020Puncak Kelud adalah yang
        tertinggi, berposisi agak di timur laut kawah. Puncak-puncak lainnya
        adalah Puncak Gajahmungkur di sisi barat dan Puncak Sumbing di sisi selatan.</string>
    <string name="kelud1">Tulungrejo Blitar</string>
    <string name="kelud2">Nama: Gunung Kelud\nKetinggia: 1731 mdpl\nLokasi: Kabupaten Kediri dan Kabupaten
        Blitar\nTipe: Gunung Aktif</string>
    <string name="panderman">\u0020\u0020\u0020\u0020\u0020Gunung Panderman adalah gunung yang terletak di
        Kota Batu, Malang. Gunung Panderman
        memiliki ketinggian 2.045 mdpl. Gunung ini terlihat anggun dilihat dari Alun-alun Batu.</string>
    <string name="panderman1">Dukuh Toyomerto, Desa Pesanggrahan\nJalur Curah Banteng</string>
    <string name="panderman2">Nama: Gunung Panderman\nKetinggian: 2.045 mdpl\nLokasi: Batu Malang\nTipe:
        Gunung Non-Aktif\nPuncak: Puncak Pasundra</string>
    <string name="penanggungan">\u0020\u0020\u0020\u0020\u0020Gunung Penanggungan adalah gunung api istirahat yang
        terletak di Kabupaten
        Mojokerto (Barat) dan Kabupaten Pasuruan (Timur). Gunung Penanggungan memiliki ketinggian 1.653 mdpl.
        Gunung ini adalah gunung kecil yang terletak tidak jauh dari Gunung Arjuno dan Gunung
        Welirang.\n\u0020\u0020\u0020\u0020\u0020Berdasarkan
        studi selama dua tahun (2012-2014) ditemukan 116 situs percandian atau objek kepurbakalaan,
        mulai dari kaki sampai mendekati puncak gunung Penanggungan.\n\u0020\u0020\u0020\u0020\u0020Disekeliling
        gunung penanggungan terdapat
        bukit-bukit disekitarnya yaitu, Bukit Bekel (1238 m), Gajah Mungkur (1084 m),
        Sarah Klopo (1235 m), dan Kemuncup (1238 m).\n\u0020\u0020\u0020\u0020\u0020Penelitian
        yang dilakukan Turangga Seta mengindikasikan bahwa gunung Penanggungan
        adalah area kraton Mojopoit/Majapahit yang ditimbun.
    </string>
    <string name="penanggungan1">Wonosunyo,\nSeloliman,\nTrawas,\nNgoro</string>
    <string name="penanggungan2">Nama: Gunung Penanggungan\nKetinggian: 1653 mdpl\nLokasi: Mojokerto,
        Pasuruan\nTipe: Gunung Non-Aktif</string>
    <string name="lokasi_toko_outdoor">Lokasi Toko Outdoor</string>
</resources>