<?xml version="1.0" encoding="utf-8"?>

<!--Created by Wahid Ari on 8/30/2016.-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation1"
            android:checked="false"
            android:icon="@mipmap/mountain"
            android:title="@string/navigation_view_item_1" />
        <item
            android:id="@+id/navigation2"
            android:checked="false"
            android:icon="@mipmap/route"
            android:title="@string/navigation_view_item_2" />
        <item
            android:id="@+id/navigation3"
            android:checked="false"
            android:icon="@mipmap/backpack"
            android:title="@string/navigation_view_item_3" />
        <item
            android:id="@+id/navigation4"
            android:checked="false"
            android:icon="@mipmap/maps"
            android:title="@string/navigation_view_item_4" />
        <item
            android:id="@+id/navigation5"
            android:checked="false"
            android:icon="@mipmap/store"
            android:title="@string/lokasi_toko_outdoor" />


    </group>


    <item
        android:id="@+id/navigasi_kategori_2"
        android:title="@string/navigasi_kategori_2">
        <menu>
            <item
                android:id="@+id/navigation10"
                android:checked="false"
                android:icon="@mipmap/rgb"
                android:title="@string/navigation_view_item_10" />

        </menu>
    </item>

</menu>
